# retree

./: Cargo.toml  LICENSE  README.md  _rust_etree.py  pyproject.toml
retree/: __init__.py  etree.py
rust_etree/: __init__.py  etree.py
src/: lib.rs
tests/: test_rust_etree_compat.py  test_scaffold_layout.py
tests/lxml_tests/: README.md  common_imports.py  test-string.xml  test_broken.xml  test_elementpath.py  test_elementtree.py  test_etree.py
tests/stdlib_tests/: README.md  __init__.py  test_xml_etree.py  test_xml_etree_c.py
xmltestdata/: expat224_utf8_bug.xml  simple-ns.xml  simple.xml
