[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "rust-etree"
version = "0.1.0"
description = "Rust-backed XML etree compatibility layer"
readme = "README.md"
requires-python = ">=3.10"

[tool.maturin]
python-source = "."
module-name = "rust_etree._rust_etree"
features = ["pyo3/extension-module"]
